@@ -61,6 +61,9 @@ fetchmail 6.3.1 (not yet released):
   same SMTP/LMTP connection. Reported by Joachim Feise, Berlios Bug #5849. (MA)
 * Manual page: Add "-md5" to "openssl x509" example in --sslfingerprint
   documentation.  Suggested by Jason White. (MA)
+* Cope with servers that return UID information in response to non-UID
+  RFC822.{SIZE|HEADER} requests. Reported by Jason White.
+  Patch suggestion by by Sunil Shetye, simplified by MA.
 
 fetchmail 6.3.0 (released 2005-11-30):
 
